          margin-top:1em; 
          margin-bottom:0.5em; 
          text-align:center }
      div.subtitle { 
          color:#C0F0C0; 
          font-size:0.8em; 
          margin-bottom:1em; 
          text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
$ 1.06
  % Version 1.06
  _ 2012-10-3
  ! 3D Fuel Map!
  	* Additional data reception logic tuning -- down to 70ms
  	* Incorporated a trial version of steema's Android charting library to illustrate Fuel Map #1 (must be VE)
  	* TODO: Add support for duty cycle and ignition maps
  	* TODO: Add edit capability for maps
  % Version 1.05
  _ 2012-09-27
  ! Faster COMMS!
  	* Refactored data reception logic -- huge refresh rate boost
  	* Changed Ignition and Fuel Waiting background colors to (dark) yellow rather than red as they are not error conditions
  % Version 1.04
  _ 2012-09-24
  ! Honeycomb Navigation Tabs!
  	* Navigation tab framework complete
  	* Added <i>Gauges Dashboard</i> navigation tab
  	* Added Automatic Connection on Startup preference
  	* Remember last tab selected
  	* Android Lifecycle optimizations
  	* Normal, Large, and X-Large display optimizations
  % Version 1.03
  _ 2012-09-15
  ! Initial Alarm Logging Implementation
  	* Added AFR Alarm Logging - You can save and share the resulting log file.  Log files are located in /sdcard/AdaptiveTuner and are saved in CSV format.
  % Version 1.02
  _ 2012-09-14
  ! Minor Enhancements
  	* Redesigned Icon
  	* Added AFR & Temperature Alerts
  	* Added Changelog (you're reading it now)
  % Version 1.01
  _ 2012-09-14
  ! UoM
  	* Added UoM Selection for Temperature
  % Version 1.0
  _ 2012-09-12
  ! Initial Release
  	* Display Adaptive Learning Statuses
  	* Display RPM, WAT, MAT, MAP, AFR
  % Need more help?
    * <a href="http://www.shellware.com/BlogEngine.Web/page/Adaptive-Tuner-for-Adaptronic-ECUs.aspx">Adaptive Tuner Homepage</a> 