@@ -23,7 +23,8 @@ $ 1.06
   % Version 1.06
   _ 2012-10-3
   ! 3D Fuel Map!
-  	* Additional data reception logic tuning -- down to 70ms
+  	* Additional data reception logic tuning -- down to 70ms 
+  	* Bluetooth RFCOMM discovery & connection improvements for MID PD-10 (and likely other) devices
   	* Incorporated a trial version of steema's Android charting library to illustrate Fuel Map #1 (must be VE)
   	* TODO: Add support for duty cycle and ignition maps
   	* TODO: Add edit capability for maps
